project(Project3)
cmake_minimum_required(VERSION 3.5)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
file(GLOB CPPS "*.cpp")
find_package (Threads)
add_definitions(-Wall --std=c++11)	
add_executable(${PROJECT_NAME} ${CPPS})
target_link_libraries ( ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
